# aura

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md
.github/workflows/: ci.yml  docs-sync.yml
console/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
console/src/: App.tsx  auth.ts  main.tsx  nodeDisplay.ts  smoke.ts
console/src/api/: fleet.ts  transport.ts
console/src/layout/: AppLayout.tsx
console/src/pages/Agents/: AgentsPage.tsx
console/src/pages/Console/: ConsolePage.tsx  displaySurface.ts  screenCanvas.ts  selkiesLaunch.tsx  tangoRenderer.ts
console/src/pages/Fleet/: AddDeviceModal.tsx  EditNodeMetaModal.tsx  FleetPage.tsx
console/src/pages/Recordings/: RecordingsPage.tsx
console/src/pages/Replay/: ReplayPage.tsx  replayEngine.ts
console/src/pages/Tasks/: OrchestrationWall.tsx  TasksPage.tsx  shared.ts
console/src/pages/Tokens/: TokensPage.tsx
controller/: go.mod  go.sum
controller/cmd/aura-controller/: main.go
controller/cmd/auractl/: commands.go  commands_test.go  main.go  release.go  replay_test.go
controller/deploy/: ENV.md  compose.yml  gen-certs.sh  make-template.sh
controller/deploy/detector/: Dockerfile  README.md  WEIGHTS.md  app.py  detector-deploy-cpu.yaml  detector-deploy.yaml  requirements.txt  weights-pvc.yaml
controller/deploy/install/: aura-node.plist.tmpl  aura-node.service.tmpl  install.ps1  install.sh
controller/deploy/ios/: README.md  sim-lifecycle.sh  wda-build.sh  wda-launch.sh  wda-supervise.sh
controller/deploy/redroid/: Dockerfile.node-sidecar  README.md  binder-options.conf  binder.conf  binderfs-perms.service  binderfs.mount  entrypoint.sh  namespace.yaml  redroid-pod.yaml  redroid-sidecar-pod.yaml
controller/deploy/selkies/: README.md  entrypoint-desktop.sh  selkies-node-sidecar.yaml  selkies-pod.yaml
controller/deploy/turn/: README.md  coturn-deploy.yaml  turnserver.conf  udp-echo.yaml
controller/e2e/: enroll_test.go  gateway_test.go  harness_test.go  helpers_test.go  isolation_test.go  self_update_test.go  ui_loop_test.go
controller/internal/ca/: ca.go  ca_test.go
controller/internal/console/: spa.go  spa_test.go
controller/internal/fusion/: capability.go  capability_test.go  detector.go  detector_test.go  engine.go  engine_test.go  fuse.go  fuse_test.go
controller/internal/gateway/: gateway.go  gateway_test.go
controller/internal/observability/: metrics.go  tracing.go
controller/internal/orchestrator/: orchestrator.go  orchestrator_test.go
controller/internal/provisioner/: k8s.go  k8s_real_test.go  k8s_test.go  provider.go  pve.go  pve_test.go
controller/internal/registry/: registry.go  registry_test.go
controller/internal/scheduler/: capture_integration_test.go  forward.go  forward_test.go  scheduler.go  scheduler_capture_test.go  scheduler_lease_test.go  scheduler_test.go
controller/internal/storage/: minio.go  minio_integration_test.go  minio_test.go
controller/internal/store/: agent_obs.go  agent_obs_test.go  api_tokens.go  api_tokens_integration_test.go  enrollment.go  enrollment_test.go  lease.go  lease_test.go  node_certs.go  node_certs_test.go  pg.go  pg_integration_test.go  pg_test.go  recordings_meta_test.go  redis.go  releases.go  schema.sql
controller/internal/transport/: apitoken_auth_test.go  console.go  console_agent.go  console_apitoken.go  console_artifact.go  console_artifact_stream.go  console_artifact_stream_test.go  console_artifact_test.go  console_enrollment.go  console_enrollment_test.go  console_fleet.go  console_fleet_test.go  console_fusion.go  console_fusion_test.go  console_middleware.go  console_node.go  console_node_test.go  console_orchestration.go  console_orchestration_test.go  console_query.go  console_query_test.go  console_read.go  console_recordings.go  console_recordings_test.go  console_test.go  enroll_rest.go  enroll_rest_test.go  grpc.go  grpc_test.go  mcp_gateway.go  mcp_gateway_test.go  ratelimit.go  releases.go  releases_test.go  rest.go  rest_trace_test.go  revocation.go  revocation_test.go  stream_tango.go  stream_tango_test.go
node/: Cargo.toml
node/crates/aura-capability/: Cargo.toml
node/crates/aura-capability/src/: a11y.rs  assert.rs  audio.rs  envelope.rs  input.rs  lib.rs  process_file.rs  record.rs  screen.rs  types.rs
node/crates/aura-node/: Cargo.toml  aura-node.exe.manifest  build.rs
node/crates/aura-node/src/: main.rs  service.rs
node/crates/aura-node/src/transport/: a11y_tools.rs  agent_obs.rs  assert_tools.rs  audio_tools.rs  enroll.rs  grpc_reverse.rs  infra.rs  input_tools.rs  mcp_http.rs  mcp_stdio.rs  mod.rs  proc_tools.rs  record_tools.rs  screen_tools.rs  self_update.rs  tool_dispatch.rs  upload.rs
node/crates/aura-platform/: Cargo.toml
node/crates/aura-platform/src/: a11y.rs  android.rs  audio.rs  input.rs  ios.rs  lib.rs  process_file.rs  record.rs  screen.rs
proto/: README.md  buf.gen.yaml  buf.yaml
proto/aura/v1/: console.proto  node.proto
