[package]
name = "aura-capability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "AURA 能力抽象层：平台无关、传输无关的设备能力 trait 与共享类型"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# assert image 形态（TASK-011）：参考图 WebP 解码 + base64 解码。
# 版本与 aura-platform 截图管线对齐（同 libwebp / cargo 统一锁定，无版本漂移，非占位）。
base64 = "0.22"
webp = "0.3"
